# SandboxEngine

./: .gitignore  .gitmodules  CMakeLists.txt  generate_project_files.bat
Assets/Shaders/: base.fs.sc  cube_color.vs.sc  player.vs.sc
Source/: Main.cpp  fwd.h  sndpch.h
Source/Engine/: CMakeLists.txt  Main.cpp  pch.h  sndpch.h
Source/Engine/Components/: Camera.cpp  Camera.h  CameraComponent.cpp  CameraComponent.h  Material.h  MaterialComponent.h  Mesh.h  Transform.h  TransformComponent.h
Source/Engine/Core/: Delegate.h  EntryPoint.cpp  EntryPoint.h  Error.h  File.cpp  File.h  Input.h  Log.h  Profile.h  Sid.h  String.cpp  Uid.h
Source/Engine/Ecs/: Ecs.cpp  Ecs.h
Source/Engine/Ecs/Components/: CameraComponent.cpp  CameraComponent.h  MeshComponent.h  MovementComponent.h  TransformComponent.h
Source/Engine/Ecs/Systems/: CameraSystem.cpp  MovementSystem.cpp  MovementSystem.h
Source/Engine/Filesystem/: Asset.h  AssetRegistry.cpp  AssetRegistry.h  Filesystem.cpp  Filesystem.h
Source/Engine/Math/: Matrix.cpp  Matrix.h  Quat.cpp  Vector.h
Source/Engine/Memory/: Buffer.h  Memory.h  SparseBuffer.h
Source/Engine/Render/: Render.cpp  Render.h  Vertex.cpp  Vertex.h
Source/Engine/Threading/: Thread.h  WorkQueue.cpp
Source/Engine/UI/: ImguiBgfx.cpp
Source/Platform/Windows/: WindowsInput.cpp  WindowsLog.cpp  WindowsMemory.cpp  WindowsThread.cpp  WindowsTime.cpp  WindowsWindow.cpp  WindowsWindow.h
Source/SandboxEngine/: Core.h  EntryPoint.cpp  EntryPoint.h  Error.h  Log.cpp  Log.h  Main.cpp  Window.h  sndpch.cpp  sndpch.h
Source/SandboxEngine/Components/: CameraComponent.cpp  CameraComponent.h  MaterialComponent.h  MeshComponent.h  MovementComponent.h  TransformComponent.cpp  TransformComponent.h
Source/SandboxEngine/Core/: Core.h  CoreIncludes.h  CoreMacros.h  Delegate.h  Dirty.h  EntryPoint.cpp  Error.h  FileSystem.cpp  FileSystem.h  FundamentalTypes.h  Input.h  InputBits.h  InputHelpers.h  Log.cpp  Log.h  Platform.h  Profile.h  Sid.h  String.cpp  String.h  StringId.cpp  StringId.h  Time.h  Timer.cpp  Timer.h  Uid.h  Window.h
Source/SandboxEngine/Ecs/: ComponentView.h  Ecs.h  Entity.h  EntityContainer.cpp  EntityContainer.h  EntityFilter.h
Source/SandboxEngine/Ecs/Systems/: CameraSystem.cpp  CameraSystem.h  MovementSystem.cpp  MovementSystem.h
Source/SandboxEngine/Engine/: Engine.cpp  Engine.h  EngineLoop.cpp  EngineLoop.h  InputHelpers.h
Source/SandboxEngine/Events/: Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
Source/SandboxEngine/Filesystem/: Asset.h  AssetRegistry.cpp  AssetRegistry.h  Filesystem.cpp  Filesystem.h
Source/SandboxEngine/Math/: Euler.h  Math.h  Matrix.cpp  Matrix.h  Quat.cpp  Quat.h  Vector.h
Source/SandboxEngine/Memory/: Arena.h  Buffer.h  Memory.cpp  Memory.h  SparseBuffer.h  StackAllocator.h
Source/SandboxEngine/Render/: Camera.cpp  Camera.h  Render.cpp  Render.h  Vertex.cpp  Vertex.h
Source/SandboxEngine/Threading/: Thread.h  WorkQueue.cpp  WorkQueue.h
Source/SandboxEngine/UI/: ImguiBgfx.cpp  ImguiBgfx.h  UI.cpp  UI.h
Source/SandboxEngine/World/: Camera.cpp  Camera.h
Source/SandboxEngine/bgfx-imgui/: fs_ocornut_imgui.bin.h  imgui_impl_bgfx.cpp  imgui_impl_bgfx.h  vs_ocornut_imgui.bin.h
Source/Tests/: ArenaTests.cpp  BufferTests.cpp  MemoryTests.cpp  StackAllocatorTests.cpp
src/engine/: CMakeLists.txt  main.cpp  pch.h
src/engine/components/: camera.h  spring_arm.h  texture.h  velocity.h
src/engine/core/: entry_point.cpp  entry_point.h  file.cpp  file.h  profile.h
src/engine/render/: render.cpp  render.h  vertex.cpp  vertex.h
src/engine/ui/: imgui_bgfx.cpp  imgui_bgfx.h  ui.h
